--- a/Assignment1.Rmd
+++ b/Assignment1.Rmd
@@ -2,14 +2,16 @@
 title: "Assignment1_Seshadri"
 author: "Sri Seshadri"
 date: "4/7/2018"
-output: 
+output:
   pdf_document:
     highlight: tango
+  html_document:
+    df_print: paged
 ---
 
 
-```{r setup, include=F}
-knitr::opts_chunk$set(echo = T)
+```{r setup, include=F,warning=FALSE,message=F,error=FALSE,fig.show='asis'}
+knitr::opts_chunk$set(echo = F)
 library(magrittr)
 library(dplyr)
 library(fpp)
@@ -32,10 +34,11 @@ library(fma)
   It would be useful to normalize the data by population, to get the percent unemployed of the total population. Then if need be a transformation on the normalized data can be made.
   
   
-```{r, fig.cap="Monthly number of people on unemployment benefits in Australia",fig.height=4}
+```{r, fig.cap="Monthly number of people on unemployment benefits in Australia",fig.height=4,fig.pos="h",out.extra=''}
 data(package = 'fma',dole)
 plot(dole, main = "Total people on unemployment benefits in Australia", ylab = "Number of people")
 ```
+
 
 ## b) Monthly total accidental deaths in the United States
 
@@ -46,7 +49,7 @@ The middle plot in figure 2 shows the normalized total by days in the months; i.
 The bottom chart of figure 2 shows a box-cox transformation of the average accidental deaths. Its seen that there isn't much affect as expected.
 
 
-```{r,fig.height=6,fig.cap = "Top: Total accidental deaths by month in the US, Middle: Monthly Average Accidental deaths per day, Bottom: Transformed monthly average accidental deaths per day "}
+```{r,fig.height=6,fig.cap = "Top: Total accidental deaths by month in the US, Middle: Monthly Average Accidental deaths per day, Bottom: Transformed monthly average accidental deaths per day ",fig.pos="h",out.extra=''}
 data("usdeaths")
 par(mfrow = c(3,1))
 plot(usdeaths, type = "b",main = " Monthly accidental deaths", ylab = "")
@@ -65,7 +68,7 @@ grid(nx = NULL, ny = 72/12, col = "lightgray", lty = "dotted",
 
 The top chart in Figure 3 shows the time series plot of quarterly brick production at Portland Australia. The time series exhibits an increasing trend and seasonality. The variation increases with time / levels. Box-Cox transformation is appropriate for this case. The ideal lambda for the data was 0.255. The bottom chart of figure 3 shows the transformed data. The variation is better across time, of course the huge downward spikes is not fully mitigated.
 
-```{r,fig.height=8, fig.cap= "Top: Quarterly production of bricks (in millions) at Portland, Australia, Bottom : BoxCox transformed Quarterly production of bricks"}
+```{r, fig.cap= "Top: Quarterly production of bricks (in millions) at Portland, Australia, Bottom : BoxCox transformed Quarterly production of bricks",out.extra='',fig.height=8}
 data("bricksq")
 par(mfrow = c(2,1))
 plot(bricksq,main = "Quarterly production of bricks (in millions) at Portland, Australia",cex.main = 1,ylab ="")
@@ -78,13 +81,15 @@ grid(ny = NULL, nx = 156/4, col = "lightgray", lty = "dotted",
      lwd = par("lwd"), equilogs = TRUE)
 ```
 
+\pagebreak
+
 # Question 2.2 Page 60
  
 ## Time series modeling of Dow Jones index
  
  In this section the Dow jones industrial average is modeled as a time series. The drift method is used to fit the time series and forecasted for the next 10 periods. Figure 4 shows the time series plot with forecast from drift,mean and naive mean methods. Table 1 shows the forecasts from drift method and the blue line in fig 4 plots the forecasts. The drift method forecast is nothing but the extension of the line that joins the first and the last point. The slope of the line is the difference between the last and the first point divided by the number of data points. The grey dashed line in fig 4 shows the fitted drift for the Dow Jones data. 
  
-```{r, fig.cap="Time series modeling of Dow Jones industrial average"}
+```{r, fig.cap="Time series modeling of Dow Jones industrial average",fig.pos="h",out.extra=''}
 data("dowjones")
 slope <- (dowjones[78] - dowjones[1])/length(dowjones - 1)
 y <- dowjones[1] + seq(1:78)*slope
@@ -111,7 +116,6 @@ The drift method is compared with other models like the Mean of the time series,
 
 The Drift method is the best performing model amongt the competing naive models, based on MAE / MAPE. This is not surprising as we see an increasing trend in the Dow Jones index. The other methods use the mean or the last value of the time series as the forecast. The naive models do not account for the increasing trend. The Drift method does.
 
-\pagebreak
 
 ```{r}
 Metrics <- rbind.data.frame(Drift = accuracy(driftmeth), Mean = accuracy(meanmethod),Naive = accuracy(naivemethod), SeasonalNaive = accuracy(seasonnaivemethod))
@@ -123,7 +127,7 @@ knitr::kable(round(Metrics,3), caption = "Accuracy metrics of benchmark models")
 
 Figure 5 and 6 shows the residual analysis of the time series model fits. The mean model's residuals show that the means are significantly different from the other models and show it's poor performance.
 
-```{r, fig.cap="Autocorrelation plot of residuals"}
+```{r, fig.cap="Autocorrelation plot of residuals",fig.pos="h",out.extra=''}
 
 par(mfrow = c(2,2))
 Acf(driftmeth$residuals, main = "Drift Method residuals",cex.main = 0.6)
@@ -132,7 +136,7 @@ Acf(seasonnaivemethod$residuals, main = "Seasonal Naive residuals",cex.main = 0.
 Acf(meanmethod$residuals, main = "Mean method residuals", cex.main = 0.5)
 ```
 
-```{r}
+```{r,fig.cap="Residual Analysis",fig.pos="h",out.extra=''}
 par(mfrow = c(2,2))
 stats::qqnorm(as.numeric(driftmeth$residuals), type = "p",main = "Drift method residuals")
 qqline(as.numeric(driftmeth$residuals), col = "red")
@@ -145,14 +149,13 @@ qqline(as.numeric(meanmethod$residuals), col = "red")
 ```
 
 
- 
 
 
 # Question 2.3 IBM Stock prices
  
- Figure 8 shows the time series plot of IBM stock price at close. The data is split into training and test set. The first 300 data points are retained as training set and the rest of the 69 data points are held out as test set. 
+ Figure 7 shows the time series plot of IBM stock price at close. The data is split into training and test set. The first 300 data points are retained as training set and the rest of the 69 data points are held out as test set. 
  
-```{r, fig.cap="IBM Stock price at close"}
+```{r, fig.cap="IBM Stock price at close",fig.pos="h",out.extra=''}
 data("ibmclose")
 layout(matrix(c(1,1,2),nrow = 1,ncol =3))
 plot(ibmclose,ylab = "Stock Price", main = "Time series of IBM closing stock price")
@@ -175,7 +178,9 @@ naive.fit <- naive(train,h=1)
 knitr::kable(rbind.data.frame(Drift = round(accuracy(drift.fit),2),Naive = round(accuracy(naive.fit),2), Mean = round(accuracy(mean.fit),2)),caption = "Forecast Accuracy")
 ```
 
-```{r, fig.cap="Residual Analysis"}
+
+
+```{r,fig.cap="Residual Analysis",fig.pos="h",out.extra='',fig.height=4}
 par(mar=c(2.5,2.5,1,1))
 layout(matrix(c(1,2,3,4,1,5,3,6),ncol=2),heights = c(1,3,1,3))
 plot.new()
@@ -189,10 +194,10 @@ Acf(drift.fit$residuals, main = "")
 Acf(naive.fit$residuals, main = "")
 ```
 
-Figure 10 shows the actuals and the forecasts along with the time series of the forecast errors. Both the naive and drift methods are very identical.
+Figure 9 shows the actuals and the forecasts along with the time series of the forecast errors. Both the naive and drift methods are very identical.
 
-```{r,fig.cap="IBM stock price forecast"}
 
+```{r,fig.cap="IBM stock price forecast",fig.pos="h",out.extra='',fig.height=4}
 naive.generatedForecasts <- ts(sapply(1:69,function(x) naive(ibmclose[1:300+x-1], h = 1)$mean),start = 301,end = 369)
 drift.generatedForecasts <- ts(sapply(1:69,function(x) rwf(ibmclose[1:300+x-1], h = 1,drift = TRUE)$mean),start = 301,end = 369)
 layout(matrix(c(1,1,2,3),byrow = T, ncol =2),heights = c(3,2.5))
@@ -202,33 +207,27 @@ lines(naive.generatedForecasts, col = "red",lty =3)
 legend("topright", legend = c("Actual", "drift forecast", "naive forecast"),lty = c(1:3), col = c("grey","blue","red"),cex = 0.5)
 plot(test - naive.generatedForecasts,ylab = "Forecast Error", main = "Naive forecast error",col = "grey")
 plot(test - drift.generatedForecasts,ylab = "Forecast Error", main = "Drift forecast error", col ="grey")
-
 ```
+
+\pagebreak
+
+\pagebreak
  
 # 2.4 Single family house sales in the US
 
-Figure 11 shows the time series plot of home sales in the US. The top right panel shows that there is seasonality in the time series. The bottom left panel shows the variation of sales by month over years. The data is attempted to be smoothed by plotting the sales per day over years.
+Figure 10 shows the time series plot of home sales in the US. The top right panel shows that there is seasonality in the time series. The bottom left panel shows the variation of sales by month over years. The data is attempted to be smoothed by plotting the sales per day over years.
 
-```{r, fig.cap = "Time series plot of single family home sales in the US"}
+```{r, fig.cap = "Time series plot of single family home sales in the US",fig.pos="h",out.extra='',fig.show="as.is"}
 data("hsales")
 par(mfrow = c(2,2))
 plot(hsales)
 mtext("Time series plot of single family home sales in the US",adj = -3,padj = 0.5,cex = 0.8,line = 1)
-
 seasonplot(hsales,year.labels = T,col = 1:10,main = "")
 monthplot(hsales)
 salesperDay <- hsales/monthdays(hsales)
 plot(salesperDay)
-
-
 lambda <- BoxCox.lambda(salesperDay)
-#plot(BoxCox(salesperDay,lambda))
-
-
-# plot(decompose(BoxCox(salesperDay,lambda),"additive"))
-# plot(decompose(BoxCox(salesperDay,lambda),"multiplicative"))
 ```
-
 
 ## Model training
 
@@ -248,8 +247,6 @@ knitr::kable(round(rbind.data.frame(Naive = accuracy(naive.fit2), SeasonalNaive 
 The same methods are fit on the sales normalized by the number of days in a month i.e Sales per day. The accuracy of the training set is seen in the table below. Again the Naive and the drift methods are identical.
 
 ```{r}
-
-
 training.salesPerDay <- window(salesperDay, start = 1973,end = 1993-0.01)
 naive.fit3 <- naive(training.salesPerDay,h=10) 
 snaive.fit3 <- snaive(training.salesPerDay)
@@ -288,7 +285,7 @@ knitr::kable(round(rbind.data.frame(Naive = accuracy(Naive.test.forecast, test.h
 ```
 
 
-```{r}
+```{r,warning=FALSE,message=F}
 test.hsalesPerMonth <- test.hsales/monthdays(test.hsales)
 test.hsalesPerMonth.Naive <- ts(sapply(1:23,function(x) naive(hsales/monthdays(hsales)[1:240+x-1], h = 1)$mean),start = 1994,frequency = 12)
 test.hsalesPerMonth.Drift <- ts(sapply(1:23,function(x) rwf(hsales/monthdays(hsales)[1:240+x-1], h = 1,drift = T)$mean),start = 1994,frequency = 12)
@@ -298,35 +295,48 @@ knitr::kable(round(rbind.data.frame(Naive = accuracy(test.hsalesPerMonth.Naive,t
              caption = "Forecast error on test data - Sales per day per month")
 
 ```
+
+
 # Section 4.10 Question 4.1
 
-a)  Figure 12 shows rthe relationship between temperature and electricity consumption. The relationship is negative probabaly because the usage is for heating purposes.
-```{r, fig.cap = "Electricity consumption by temperature"}
+a)  Figure 11 shows rthe relationship between temperature and electricity consumption. The relationship is negative probabaly because the usage is for heating purposes.
+
+```{r, fig.cap = "Electricity consumption by temperature",fig.pos="h",out.extra='',fig.height=3,fig.show="asis"}
 library(ggplot2)
-ggplot(data = econsumption, mapping = aes(x= temp, y = Mwh)) + geom_point() + geom_smooth(method = "lm")
+ggplot(data = econsumption, mapping = aes(x= temp, y = Mwh)) + geom_point() + geom_smooth(method = "lm") +theme_bw()
 
 ```
 
-b) The model though is statistically significant has an R-Squared of only 59%. Figure 13 shows the residual plots. The residuals are fairly random. Observation 8 has the maximum residual error.
+b) The model though is statistically significant has an R-Squared of only 59%. Figure 12 shows the residual plots. The residuals are fairly random. Observation 8 has the maximum residual error.
 
-```{r,fig.cap="Residual plots"}
+```{r,fig.cap="Residual plots",fig.pos="h",out.extra='',fig.height=4}
 lm.fit <- lm(Mwh ~ temp,data = econsumption)
 summary(lm.fit)
 par(mfrow = c(2,2))
 plot(lm.fit)
 ```
+
+
 c & d) The forecast for consumption for 10 and 35 degree days and their prediction interval is provided below. The model only explain 59% of the variation in consumption. The predictions need to be used carefully. 
+
+
 ```{r}
 forecast(lm.fit,newdata = data.frame(temp = c(10,35)))
 ```
 
+\\pagebreak
+
 # Section 4.10 Question 4.2
-a & b) Figure 14 shows the winning times of 400m dash in olympic finals between 1900 to 2000. There is a decreasing trend over years. 
-```{r,fig.cap="Winning times of 400 meters dash"}
+
+a & b) Figure 13 shows the winning times of 400m dash in olympic finals between 1900 to 2000. There is a decreasing trend over years.
+
+
+```{r,fig.cap="Winning times of 400 meters dash",fig.pos="h",out.extra=''}
 data("olympic")
-ggplot(data = olympic,mapping = aes(x = Year, y = time)) + geom_point() + geom_smooth(method = "lm")
+ggplot(data = olympic,mapping = aes(x = Year, y = time)) + geom_point() + geom_smooth(method = "lm") + theme_bw()
 
 ```
+
 
 c) The decrease is at the rate of 7.6% 
 d) The residual point shows there is one influential point - observation 1. This point can lead to bias in the model fit. However otherwise the model has a 83% R-Squared.
@@ -337,7 +347,7 @@ e and f) The table below shows the prediction and the actual times. The assumpti
 
 
 
-```{r}
+```{r,fig.cap = "Residual Analysis",fig.pos="h",out.extra='',fig.height=4}
 lmfit.oly <- lm(time ~ Year, data = olympic)
 summary(lmfit.oly)
 
@@ -345,10 +355,6 @@ par(mfrow = c(2,2))
 plot(lmfit.oly)
 knitr::kable(data.frame(Year = seq(2000,2012,length.out = 4),Prediction =  predict(lmfit.oly,newdata = data.frame(Year = seq(2000,2012,length.out = 4))),Actuals = c(43.84,44,43.75,43.94)),caption = "Prediction of run times")
 
-# 2012 - 43.94
-# 2008 - 43.75
-# 2004 - 44
-# 2000 - 43.84
 ```
 
 # Section 4.10 Question 3
@@ -379,30 +385,61 @@ The above equation is identical to that of 7 MA with weights (1/15, 2/15, 1/5, 1
 
 # Section 6.7 Question 6.2
 
-a) Figure 16 shows the time series of sales of manufacturer A. It has a seasonality of period 1 year and an increasing trend.
+a) Figure 15 shows the time series of sales of manufacturer A. It has a seasonality of period 1 year and an increasing trend.
 
 
 ```{r,fig.cap="Time series plot of sales "}
 data("plastics")
 plot(plastics)
 ```
-b & c) The classical multiplicative decomposing supports the interpretation of figure 16. 
-```{r}
+
+
+b & c) The classical multiplicative decomposing supports the interpretation of figure 15.
+
+```{r, fig.cap = "Classical multiplicative decomposing"}
 DecomposeMulti <- decompose(plastics, type = "multiplicative")
 plot(DecomposeMulti)
 ```
 
-```{r}
-plot(seasadj(DecomposeMulti))
+
+d,g and h ) Figure 16 shows the time series plot of the seasonally adjusted data. 
+
+
+```{r,fig.cap="Seasonally Adj Data"}
+SeasonallyAdj <- seasadj(DecomposeMulti)
+TrendComponent <- rwf(SeasonallyAdj,drift = T,h = 24)
+plot(rwf(SeasonallyAdj,drift = T,h = 24))
+```
+
+The drift method forecasts from the seasonally adjusted data is multiplied with the seasonal components and the mean of the random error to produce the forecasts for the next 2 years. The plot of the data is shownn figure 17. 
+
+```{r,fig.cap="Rationalizing results"}
+SeasonalComponent <- snaive(DecomposeMulti$seasonal,h = 24)
+randomComponent <- naive(DecomposeMulti$random, h = 24)
+Fcts <- SeasonalComponent$mean * TrendComponent$mean * rep(mean(DecomposeMulti$random,na.rm = T),24)
+plot(c(plastics,Fcts),type = "b",col=c(rep("grey",60),rep("blue",24)),main = "Rationalizing the results of multiplicative decomposition", xlab = "Year", ylab = "Units in thousands")
+legend("bottomright",legend = c("Actuals","Forecasts"), col = c("grey","blue"),pch =1, cex = 0.6)
+
+```
+
+f) Figure 18 shows the decomposition when 500 units is added to Nov of year 5. The effect is none, this is because of the classical decomposition that has a disadvantage of losing predictions in the begining and ending of the time series (loss of half year each).
+Figure 19 Shows the decomposition when 500 units is added to June of year 4. This has a slight effect on the predictions and it can be seen in the random error chart as a spike. The moving average smoothes over the spike to minimize its effect. 
+
+```{r,fig.cap = "Added 500 to december of year 5"}
 plastics.rev <- plastics
 plastics.rev[59] <- plastics.rev[59] + 500
-plot(plastics.rev)
-grid(ny = NULL, nx = 61, col = "lightgray", lty = "dotted",
-     lwd = par("lwd"), equilogs = TRUE)
 plot(decompose(plastics.rev, type = "multiplicative"))
+```
 
+```{r,fig.cap = "Added 500 to Jun of Year 4"}
 plastics.rev2 <- plastics
 plastics.rev2[42] <- plastics.rev[42] + 500
 plot(decompose(plastics.rev2, type = "multiplicative"))
 ```
 
+
+# Section 6.7 Question 6.3
+
+a) The trend component is the major source of variation in the data. There is a steady increase (constant rate) for the most part from 1978 to 1995. The seasonal component and the random error each take up only about 8% (16% in total) of the varaition in the data. The month of November and Feb has not changed year over year. The month of March has seen much volatility. Likely because of the recession in 91' & 92'. 
+
+b) the recession is slightly visible in the trend, but not much. However the random error spikes in the negative direction shows that the model did not pick up the recession. 
